--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@ caption {
 	vertical-align: baseline;
 	background: transparent;
 }
-body { width: 100%; height: 100%; font-weight: normal; line-height: 1; font-family: 'Droid Serif', serif; font-size: 16px; background: #FFF; color: #666; }
+body { width: 100%; height: 100%; font-weight: normal; line-height: 1; font-family: 'Droid Serif', serif; font-size: 15px; background: #F2F2F2; color: #666; }
 a { cursor: pointer; text-decoration: none; color: #2980b9; }
 ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
@@ -271,7 +271,7 @@ p .welcomecolor {color: cyan;}
 h1.block-title, h2.block-title { display: block; position: relative; width: 1180px; line-height: 1; margin: 0 auto; margin-bottom: 40px; padding-bottom: 40px; font-size: 55px; font-family: 'Lato', sans-serif; font-weight: 900; text-align: center; }
 h1.block-title:after, h2.block-title:after { display: block; content: " "; position: absolute; bottom: 0; left: 0; right: 0; margin-left: auto; margin-right: auto; width: 40px; height: 6px; background: #CCC; }
 .block-text { width: 1000px; margin: 0 auto; }
-.block-text p { margin-bottom: 20px; line-height: 170%; font-size: 18px; color: #666; }
+.block-text p { margin-bottom: 20px; line-height: 170%; font-size: 18px; color: #666; text-align: center;}
 
 
 /*=====================================================================================*/
@@ -365,9 +365,9 @@ a.floating-button span.line:last-child { margin-bottom: 0px; }
 .home2 { width: 1180px; height: 670px; position: relative; margin: 0 auto; text-align: center; }
 .home2 .welcome { display: inline-block; padding-top: 13%; position: relative; z-index: 99; }
 .home2 .welcome .mini-intro { margin-bottom: 25px; font-size: 15px; color: #333; }
-.home2 .welcome .big-headline h1 { display: inline-block; line-height: 150%; margin-bottom: 40px; font-size: 80px; font-family: 'Lato', sans-serif; font-weight: 900; }
-.home2 .welcome .cta-container { font-family: 'Montserrat', sans-serif; font-size: 13px; font-weight: bold; }
-.home2 .welcome .cta-container a { display: inline-block; height: 57px; line-height: 57px; padding: 0px 30px; color: #000; border: 1px solid #000; transition: opacity 1s; -webkit-transtion: opacity 1s; -moz-transition: opacity 1s; }
+.home2 .welcome .big-headline h1 { display: inline-block; line-height: 150%; margin-bottom: 40px; font-size: 80px; font-family: 'Lato', sans-serif; font-weight: 900; color: #000; text-transform: uppercase; width: 500px;}
+.home2 .welcome .cta-container { font-family: 'Montserrat', sans-serif; font-size: 15px; font-weight: bold; background-color: #FF3CA2; width: 200px; margin: 0 auto;}
+.home2 .welcome .cta-container a { display: inline-block; height: 57px; line-height: 57px; padding: 0px 30px; color: #FFF; transition: opacity 1s; -webkit-transtion: opacity 1s; -moz-transition: opacity 1s; text-transform: uppercase;}
 .home2 .welcome .cta-container a:hover { opacity: 0.6; }
 
 /*-- Home 3 ( Model Agency + Fashion ) --*/
