changed footer to match comps. working on pokadots

--- a/style/style.css
+++ b/style/style.css
@@ -966,6 +966,12 @@ span.video-overlay { display: block; position: absolute; top: 0; left: 0; bottom
 #elastic-preloader h1:after { content: "%"; padding-left: 30px; font-size: 80px; font-weight: normal; }
 
 /*=====================================================================================*/
+/*       12. Pokadot SVG Styling                                                                   */
+/*=====================================================================================*/
+
+.dotsvg { background: url('images/pokadot.svg'); background-repeat: repeat; width:1185px; height: 100px;}
+
+/*=====================================================================================*/
 /*       12. FOOTER                                                                    */
 /*=====================================================================================*/
 
@@ -973,7 +979,8 @@ span.video-overlay { display: block; position: absolute; top: 0; left: 0; bottom
 .footer-social { margin-bottom: 35px; text-align: center; }
 .footer-social a { display: inline-block; margin: 0 30px; font-size: 18px; transition: opacity 1s; -webkit-transtion: opacity 1s; -moz-transition: opacity 1s; }
 .footer-social a:hover { opacity: 0.5; }
-.footer-copyright { text-align: center; font-size: 13px; font-family: 'Lato', sans-serif; }
+.footer-copyright { text-align: center; font-size: 23px; font-family: 'Lato', sans-serif; }
+.footer-copyright img {max-height: 50px; max-width: 185px; 150px; margin-top: 30px;}
 .black-footer { background: #000; }
 .black-footer, .black-footer a { color: #FFF; }
 .black-footer .footer-copyright { color: #999; }
@@ -2927,7 +2934,7 @@ span.video-overlay { display: block; position: absolute; top: 0; left: 0; bottom
        .footer { width: 420px; }
        .footer-social { margin-bottom: 30px; }
        .footer-social a { margin: 0 12px; font-size: 13px; }
-       .footer-copyright { font-size: 12px; }
+       .footer-copyright { font-size: 13px; }
 
        /*-- Framework --*/
        .full { width: 420px; margin-bottom: 30px; }
