--- a/style/style.css
+++ b/style/style.css
@@ -969,13 +969,13 @@ span.video-overlay { display: block; position: absolute; top: 0; left: 0; bottom
 /*       12. Pokadot SVG Styling                                                                   */
 /*=====================================================================================*/
 
-.dotsvg { background: url('images/pokadot.svg'); background-repeat: repeat; width:1185px; height: 100px;}
+.dotsvg { background: url('images/pokadot.svg'); background-repeat: repeat; width:100%; height: 100px; margin-top: 55px;}
 
 /*=====================================================================================*/
 /*       12. FOOTER                                                                    */
 /*=====================================================================================*/
 
-.footer { width: 1180px; margin: 0 auto; padding-top: 75px; padding-bottom: 65px; }
+.footer { width: 100%; margin: 0 auto; padding-top: 75px; padding-bottom: 65px; }
 .footer-social { margin-bottom: 35px; text-align: center; }
 .footer-social a { display: inline-block; margin: 0 30px; font-size: 18px; transition: opacity 1s; -webkit-transtion: opacity 1s; -moz-transition: opacity 1s; }
 .footer-social a:hover { opacity: 0.5; }
