--- a/style/style.css
+++ b/style/style.css
@@ -1189,26 +1189,35 @@ padding: 60px 20px;
 /*=====================================================================================*/
 
 .exclusive-container{
-	width: 50%;
+	width: 100%;
   height: 300px;
-  margin-left: 25.5%;
 }
 
 .exclusive-container-left {
 	float: left;
-	width: 40%;
+	width: 50%;
+
 
 }
 
 .exclusive-container-right{
-	float: right;
-	width: 60%;
+	float: left;
+	width: 50%;
+
 }
 
-.exclusive-list-style {
+.exclusive-list-style-left {
 	list-style-type: circle;
+	display: table;
+	float: right;
+	width:50%;
 }
 
+.exclusive-list-style-right {
+	list-style-type: circle;
+	display: table;
+
+}
 
 
 
@@ -1222,18 +1231,26 @@ background-attachment: fixed !important;
 
 /* Swapping intro video for head-gif for ipad and Mobile*/
 
-@media only screen and (max-width: 500px) {
+/*@media only screen and (max-width: 500px) {
 #introVideo {
 	display: none;
-}
+ }
 
 .header-gif {
 
+ }
+}*/
 
-}
+
+/*@media only screen and (max-width: 1187px) {
+	.header-gif {
+		display: none;
+
+	}
+
+}*/
 
 
-}
 
 /*=====================================================================================*/
 /*       15. MEDIA QUERIES                                                             */
