--- a/style/style.css
+++ b/style/style.css
@@ -1184,12 +1184,16 @@ padding: 60px 20px;
 	text-align: center;
 }
 
-.explore-block {
-	padding-top: 90px !important;
-}
+
 
 #exclusive {
 	padding-bottom: 90px;
+}
+
+@media screen and (min-width: 961px) {
+	.explore-block {
+		padding-top: 90px !important;
+	}
 }
 @media screen and (max-width: 695px) {
 	.exclusive-list-style-left {
